--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
    <p>Environment can be defined as a sum total of all the living and non-living elements and their effects that influence human life. While all living or biotic elements are animals, plants, forests, fisheries, and birds, non-living or abiotic elements include water, land, sunlight, rocks, and air.</p>
    <div class="relative">Environment functions</div>
     <img src="e.jpeg" width="400px" height="200px"></img>
+    
+    <video controls="controls">
+        <source src="C:\Users\nstib\OneDrive\Documents\html\jitesh .html\Herb - 26637.mp4">
+        
 </body>
 </html>
