--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="e.jpeg" width="400px" height="200px"></img>
     
     <video controls="controls">
-        <source src="C:\Users\nstib\OneDrive\Documents\html\jitesh .html\Herb - 26637.mp4">
+        <source src="C:\Users\nstib\OneDrive\Documents\html\jitesh .html\Herb - 26637.mp4" width="400px" height="200px">
         
 </body>
 </html>
