--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <video controls="controls">
         <source src="C:\Users\nstib\OneDrive\Documents\html\jitesh .html\Herb - 26637.mp4" width="400px" height="200px">
+    </video>
         
 </body>
 </html>
