--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <style>
-.relative{position:relative; border:3px solid #73ad21}
+.relative{position:relative; border:3px solid #73ad21 back-ground color:violet; color:white;}
     </style>
     <title>css relative position</title>
 </head>
