--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <style>
+        div,p{border:5px solid blue; text-align:center; padding:20px; margin:20px; color:red;}
 .relative{position:relative; border:3px solid #73ad21;}
     </style>
     <title>css relative position</title>
@@ -12,7 +13,10 @@
    <div class="relative">Environment functions</div>
     <img src="e.jpeg" width="400px" height="200px"></img>
     <img src="f.jpeg" width="400px" height="200px"></img>
-    <img src="g.jpeg" width="420px" height="200px"></img>
+    <img src="g.jpeg" width="420px" height="200px"></img><br>
+<div> save environment</div>
+
+
     
         
 </body>
