--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <style>
-        div,p{border:5px solid blue; text-align:center; padding:20px; margin:20px; color:red;}
+        div{border:5px solid blue; text-align:center; padding:20px; margin:20px; color:red;}
 .relative{position:relative; border:3px solid #73ad21;}
     </style>
     <title>css relative position</title>
