--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <style>
-        div,p{border:5px solid blue; text-align:center; padding:20px; margin:20px; color:red;}
+        div,p{border:5px solid cyan; text-align:center; padding:20px; margin:20px; color:white;}
 .relative{position:relative; border:3px solid #73ad21;}
     </style>
     <title>css relative position</title>
 </head>
 <body background="h.jpeg">
-    <h2> <font color="blue">Environment meaning:</font></h2> 
+    <h2> <font color="green">Environment meaning:</font></h2> 
    <p>Environment can be defined as a sum total of all the living and non-living elements and their effects that influence human life. While all living or biotic elements are animals, plants, forests, fisheries, and birds, non-living or abiotic elements include water, land, sunlight, rocks, and air.</p>
    <div class="relative">Environment functions</div>
     <img src="e.jpeg" width="400px" height="200px"></img>
