--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <style>
+        li{display:inline; textialign:center; border:3px solid violet;}
+        a{text-decoration:none}
         div,p{border:5px solid blue; text-align:center; padding:20px; margin:20px; color:white;}
 .relative{position:relative; border:3px solid #73ad21;}
     </style>
@@ -16,6 +18,12 @@
     <img src="f.jpeg" width="400px" height="200px"></img>
     <img src="g.jpeg" width="420px" height="200px"></img><br>
 <div> save environment</div>
+<ul>
+    <li> <a href="#">environment</a></li>
+    <li><a href="#"> nature</a></li>
+    <li><a href="#">world</a> </li>
+    
+</ul>
 
 
     
