--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         li{display:inline; textialign:center; border:3px solid violet;}
-        a{text-decoration:none}
+        a{text-decoration:none;}
         div,p{border:5px solid blue; text-align:center; padding:20px; margin:20px; color:white;}
 .relative{position:relative; border:3px solid #73ad21;}
     </style>
