--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
     <title>css relative position</title>
 </head>
-<body background="g.jpeg">
+<body bgcolor="cyan">
     <h2> <font color="blue">Environment meaning:</font></h2> 
   <p>Environment can be defined as a sum total of all the living and non-living elements and their effects that influence human life. While all living or biotic elements are animals, plants, forests, fisheries, and birds, non-living or abiotic elements include water, land, sunlight, rocks, and air.</p>
     <p>Environment can be defined as a sum total of all the living and non-living elements and their effects that influence human life. While all living or biotic elements are animals, plants, forests, fisheries, and birds, non-living or abiotic elements include water, land, sunlight, rocks, and air.</p>
