--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" rel="stylesheet" href="mystyle.CSS"/>
+    <link type="text/css" rel="stylesheet" href="style.CSS"/>
     
     <title>jitesh profile</title>
 </head>
