--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </ul>
                     </p>
                     <h3>EDUCATIONAL CREDENTIALS:</h3>
-                    <table>
+                    <table cell spacing="12" cell padding="12">
                         <tr id="heading">
                             <td>Qualification</td>
                             <td>Board</td>
